# fastapi-semcache

./: .env.example  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  et --soft HEAD~1  fastapi_semcache.py  fastapi_semcache.pyi  mkdocs.yml  pyproject.toml
app/: __init__.py  main.py
docker/: compose.yml  init.sql
docs/: cache-tuning.md  embedders.md  index.md  when-not-to-use.md
examples/: proxy.py
semanticcache/: __init__.py  cache.py  config.py  exceptions.py  proxy.py  types.py
semanticcache/embedders/: __init__.py  _base.py  cohere.py  ollama.py  openai.py  sbert.py  voyage.py
semanticcache/middleware/: __init__.py  coordination.py  extractors.py  fastapi.py  replay.py
semanticcache/middleware/adapters/: __init__.py  fastapi.py
semanticcache/middleware/adapters/fastapi/: __init__.py  asgi_io.py  cache_ops.py  flow.py  logging_utils.py  middleware.py  types.py
semanticcache/middleware/core/: __init__.py  coordination.py  extractors.py  replay.py
semanticcache/stores/: __init__.py
semanticcache/stores/response/: __init__.py  redis_store.py
semanticcache/stores/vector/: __init__.py  pgvector.py  storage_ids.py
tests/: test_cache.py  test_cache_settings.py  test_fastapi_semcache_stub.py  test_proxy.py  test_redis_response_store.py  test_streaming.py
tests/embedders/: test_get_embedder.py  test_ollama.py  test_openai.py  test_sbert.py  test_sbert_integration.py  test_voyage.py
tests/middleware/: test_body_limits.py  test_cached_response_replay.py  test_circuit_breaker_429.py  test_extraction_fail_open.py  test_extractors_scope.py  test_flight_locks.py  test_scope_alignment.py  test_stream_hit_replay.py  test_stream_tee_flow.py  test_tee_send.py
