[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-semcache"
version = "0.2.19"
description = "Drop in FastAPI middleware/reverse proxy with semantic caching for APIs & LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = [
    "cache",
    "embedding",
    "embeddings",
    "fastapi",
    "llm",
    "pgvector",
    "redis",
    "semantic-cache",
    "semantic cache",
    "vector",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic-settings>=2.14.0",
]

# PyPI serves CPU torch wheels by default. For CUDA, install with PyTorch's index (README).
[project.optional-dependencies]
redis = ["redis>=7.4.0"]
embed-huggingface = ["sentence-transformers>=3.0", "torch>=2.1.0"]
embed-openai = ["openai>=1.40", "tiktoken>=0.7"]
embed-ollama = ["openai>=1.40"]
test = [
    "numpy>=1.24",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/axm1647/fastapi-semcache"
Repository = "https://github.com/axm1647/fastapi-semcache"
Issues = "https://github.com/axm1647/fastapi-semcache/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["semanticcache*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires sentence-transformers, downloads or uses cached models",
]

[tool.basedpyright]
include = ["semanticcache"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
